<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txtCabecera"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrimosActivity"
    android:background="@android:color/holo_green_light">

    <ImageView
        android:id="@+id/imageViewCabeceraPrimos"
        android:layout_width="151dp"
        android:layout_height="159dp"
        android:layout_marginTop="84dp"
        android:contentDescription="@string/imagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/numbersgrande" />

    <TextView
        android:id="@+id/textViewCabeceraPrimos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CabeceraPrimos"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"/>

    <EditText
        android:id="@+id/editTextPrimos"
        android:layout_width="107dp"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/IntroduceNumero"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCabeceraPrimos" />

    <Button
        android:id="@+id/buttonComprobarPrimos"
        style="@style/botones"
        android:layout_marginTop="20dp"
        android:onClick="compruebaNumero"
        android:text="@string/comprobar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPrimos" />

    <Button
        android:id="@+id/buttonVolverPrimos"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/ic_keyboard_arrow_left_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="cerrarActivity"
        style="@style/botones_volver"/>

</androidx.constraintlayout.widget.ConstraintLayout>